[package]
name = "color_picker"
version = "1.1.2"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple terminal color picker"
repository = "https://github.com/Mendess2526/color_picker"
categories = ["command-line-utilities", "visualization"]
keywords = ["cli", "color"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
